--- a/app/src/main/res/layout/item_proj_in_calendar.xml
+++ b/app/src/main/res/layout/item_proj_in_calendar.xml
@@ -1,14 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
+    android:layout_height="wrap_content"
     android:background="@drawable/bg_white_15"
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <EditText
         android:id="@+id/title"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="30dp"
         app:layout_constraintTop_toTopOf="parent"
         android:layout_margin="2dp"
         android:background="@color/colorBackground"
@@ -16,7 +16,7 @@
     <EditText
         android:id="@+id/description"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="30dp"
         android:layout_margin="2dp"
         android:background="@color/colorBackground"
         app:layout_constraintTop_toBottomOf="@id/title"/>
