--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -27,19 +27,17 @@
     <RelativeLayout
         android:id="@+id/thing_pool"
         android:layout_width="match_parent"
-        android:layout_height="300dp"
+        android:layout_height="0dp"
         app:layout_constraintTop_toBottomOf="@+id/btn_confirm"
+        app:layout_constraintBottom_toBottomOf="parent"
         android:layout_marginTop="10dp">
-        <GridLayout
+        <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/box_list"
             android:layout_width="match_parent"
-            android:layout_height="100dp"
-            android:layout_alignParentBottom="true"
-            android:columnCount="3"
-            android:rowCount="2"/>
+            android:layout_height="wrap_content"
+            android:layout_alignParentBottom="true" />
 
-    </RelativeLayout>
-
+        </RelativeLayout>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
 </layout>
